log/build_2026-04-24_17-31-06/unitree_g1_dex3_stack/stderr.log
In file included from /usr/include/aarch64-linux-gnu/c++/9/bits/c++allocator.h:33,
                 from /usr/include/c++/9/bits/allocator.h:46,
                 from /usr/include/c++/9/memory:63,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:144,
                 from /home/unitree/Desktop/unitree_dex3/src/unitree_g1_dex3_stack-main/src/ik_fcl_ompl_planner.cpp:1:
/usr/include/c++/9/ext/new_allocator.h: In instantiation of ‘void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = TRAC_IK::TRAC_IK; _Args = {KDL::Chain&, KDL::JntArray&, KDL::JntArray&, double&, double&, TRAC_IK::SolveType&}; _Tp = TRAC_IK::TRAC_IK]’:
/usr/include/c++/9/bits/alloc_traits.h:483:4:   required from ‘static void std::allocator_traits<std::allocator<_Tp1> >::construct(std::allocator_traits<std::allocator<_Tp1> >::allocator_type&, _Up*, _Args&& ...) [with _Up = TRAC_IK::TRAC_IK; _Args = {KDL::Chain&, KDL::JntArray&, KDL::JntArray&, double&, double&, TRAC_IK::SolveType&}; _Tp = TRAC_IK::TRAC_IK; std::allocator_traits<std::allocator<_Tp1> >::allocator_type = std::allocator<TRAC_IK::TRAC_IK>]’
/usr/include/c++/9/bits/shared_ptr_base.h:548:39:   required from ‘std::_Sp_counted_ptr_inplace<_Tp, _Alloc, _Lp>::_Sp_counted_ptr_inplace(_Alloc, _Args&& ...) [with _Args = {KDL::Chain&, KDL::JntArray&, KDL::JntArray&, double&, double&, TRAC_IK::SolveType&}; _Tp = TRAC_IK::TRAC_IK; _Alloc = std::allocator<TRAC_IK::TRAC_IK>; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/9/bits/shared_ptr_base.h:679:16:   required from ‘std::__shared_count<_Lp>::__shared_count(_Tp*&, std::_Sp_alloc_shared_tag<_Alloc>, _Args&& ...) [with _Tp = TRAC_IK::TRAC_IK; _Alloc = std::allocator<TRAC_IK::TRAC_IK>; _Args = {KDL::Chain&, KDL::JntArray&, KDL::JntArray&, double&, double&, TRAC_IK::SolveType&}; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/9/bits/shared_ptr_base.h:1344:71:   required from ‘std::__shared_ptr<_Tp, _Lp>::__shared_ptr(std::_Sp_alloc_shared_tag<_Tp>, _Args&& ...) [with _Alloc = std::allocator<TRAC_IK::TRAC_IK>; _Args = {KDL::Chain&, KDL::JntArray&, KDL::JntArray&, double&, double&, TRAC_IK::SolveType&}; _Tp = TRAC_IK::TRAC_IK; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/9/bits/shared_ptr.h:359:59:   required from ‘std::shared_ptr<_Tp>::shared_ptr(std::_Sp_alloc_shared_tag<_Tp>, _Args&& ...) [with _Alloc = std::allocator<TRAC_IK::TRAC_IK>; _Args = {KDL::Chain&, KDL::JntArray&, KDL::JntArray&, double&, double&, TRAC_IK::SolveType&}; _Tp = TRAC_IK::TRAC_IK]’
/usr/include/c++/9/bits/shared_ptr.h:701:14:   required from ‘std::shared_ptr<_Tp> std::allocate_shared(const _Alloc&, _Args&& ...) [with _Tp = TRAC_IK::TRAC_IK; _Alloc = std::allocator<TRAC_IK::TRAC_IK>; _Args = {KDL::Chain&, KDL::JntArray&, KDL::JntArray&, double&, double&, TRAC_IK::SolveType&}]’
/usr/include/c++/9/bits/shared_ptr.h:717:39:   required from ‘std::shared_ptr<_Tp> std::make_shared(_Args&& ...) [with _Tp = TRAC_IK::TRAC_IK; _Args = {KDL::Chain&, KDL::JntArray&, KDL::JntArray&, double&, double&, TRAC_IK::SolveType&}]’
/home/unitree/Desktop/unitree_dex3/src/unitree_g1_dex3_stack-main/src/ik_fcl_ompl_planner.cpp:197:128:   required from here
/usr/include/c++/9/ext/new_allocator.h:146:4: error: no matching function for call to ‘TRAC_IK::TRAC_IK::TRAC_IK(KDL::Chain&, KDL::JntArray&, KDL::JntArray&, double&, double&, TRAC_IK::SolveType&)’
  146 |  { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
      |    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/unitree/Desktop/unitree_dex3/src/unitree_g1_dex3_stack-main/src/ik_fcl_ompl_planner.cpp:13:
/home/unitree/Desktop/unitree_dex3/install/trac_ik_lib/include/trac_ik/trac_ik.hpp:51:3: note: candidate: ‘TRAC_IK::TRAC_IK::TRAC_IK(rclcpp::Node::SharedPtr, const string&, const string&, const string&, double, double, TRAC_IK::SolveType)’
   51 |   TRAC_IK(rclcpp::Node::SharedPtr nh, const std::string& base_link, const std::string& tip_link, const std::string& URDF_param = "robot_description", double _maxtime = 0.005, double _eps = 1e-5, SolveType _type = Speed);
      |   ^~~~~~~
/home/unitree/Desktop/unitree_dex3/install/trac_ik_lib/include/trac_ik/trac_ik.hpp:51:35: note:   no known conversion for argument 1 from ‘KDL::Chain’ to ‘rclcpp::Node::SharedPtr’ {aka ‘std::shared_ptr<rclcpp::Node>’}
   51 |   TRAC_IK(rclcpp::Node::SharedPtr nh, const std::string& base_link, const std::string& tip_link, const std::string& URDF_param = "robot_description", double _maxtime = 0.005, double _eps = 1e-5, SolveType _type = Speed);
      |           ~~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /home/unitree/Desktop/unitree_dex3/src/unitree_g1_dex3_stack-main/src/ik_fcl_ompl_planner.cpp:13:
/home/unitree/Desktop/unitree_dex3/install/trac_ik_lib/include/trac_ik/trac_ik.hpp:49:3: note: candidate: ‘TRAC_IK::TRAC_IK::TRAC_IK(rclcpp::Node::SharedPtr, const KDL::Chain&, const KDL::JntArray&, const KDL::JntArray&, double, double, TRAC_IK::SolveType)’
   49 |   TRAC_IK(rclcpp::Node::SharedPtr nh, const KDL::Chain& _chain, const KDL::JntArray& _q_min, const KDL::JntArray& _q_max, double _maxtime = 0.005, double _eps = 1e-5, SolveType _type = Speed);
      |   ^~~~~~~
/home/unitree/Desktop/unitree_dex3/install/trac_ik_lib/include/trac_ik/trac_ik.hpp:49:35: note:   no known conversion for argument 1 from ‘KDL::Chain’ to ‘rclcpp::Node::SharedPtr’ {aka ‘std::shared_ptr<rclcpp::Node>’}
   49 |   TRAC_IK(rclcpp::Node::SharedPtr nh, const KDL::Chain& _chain, const KDL::JntArray& _q_min, const KDL::JntArray& _q_max, double _maxtime = 0.005, double _eps = 1e-5, SolveType _type = Speed);
      |           ~~~~~~~~~~~~~~~~~~~~~~~~^~
make[2]: *** [CMakeFiles/ik_fcl_ompl_planner.dir/build.make:63: CMakeFiles/ik_fcl_ompl_planner.dir/src/ik_fcl_ompl_planner.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:310: CMakeFiles/ik_fcl_ompl_planner.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
